--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         // STEP 2: Fallback to GitHub API if no tracks found
         if (tracks.length === 0) {
           console.log('Using GitHub API for track listing...');
-          const repo = 'tgnoil/site';  // UPDATE FOR YOUR USERS
+          const repo = 'tgnoil/audio-player';  // UPDATE FOR YOUR USERS
           const branch = 'main';
           const path = 'music';
           
@@ -527,4 +527,5 @@ togglePlay() {
 
 </body>
 </html>
+
 
